# roboto-guilliman

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/rules/: eleventh_edition_only.mdc  gw_rules_downloads.mdc
.github/workflows/: ci.yml
data/rules/core_rules/: page_captions.json
docs/: core_rules_chunking.md  roadmap.md
infra/pulumi/: pyproject.toml
roboto_guilliman/: config.py  embeddings.py  gcp_auth.py  gemini_client.py  prompts.py  retriever.py
roboto_guilliman/api/: main.py
roboto_guilliman/ingestion/: caption_pages.py  download_rules.py  ingest_rules.py
roboto_guilliman/ingestion/parsers/: core_rules.py
scripts/: audit_24_37_tail.py  audit_core_rules_chunks.py  audit_core_rules_pass2.py
tests/: test_caption_pages.py  test_core_rules_parser.py  test_download_rules.py  test_ingest_rules.py  test_prompts.py
