[tool.poetry]
name = "roboto-guilliman"
version = "0.1.0"
description = "AI-powered Warhammer 11th edition rules arbiter for battleplan.uk"
authors = ["tyberium <tyberium@gmx.com>"]
packages = [{ include = "roboto_guilliman" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
google-cloud-firestore = "^2.19.0"
google-genai = "^1.0.0"
pymupdf = "^1.24.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.8.0"

[tool.poetry.scripts]
download-rules = "roboto_guilliman.ingestion.download_rules:main"
ingest-rules = "roboto_guilliman.ingestion.ingest_rules:main"
serve = "roboto_guilliman.api.main:run"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
